# homebrew-tap-setup

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: inputs.rs  main.rs  runner.rs  state.rs
src/steps/: add_formula.rs  brew_tap_new.rs  commit_and_push.rs  final_summary.rs  gh_repo_create.rs  mod.rs  preflight.rs  validate_tap.rs
